Another pathfinding algorithm (maybe better...